--- a/welcome/.settings/org.eclipse.wst.common.component
+++ b/welcome/.settings/org.eclipse.wst.common.component
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="rest-api">
+    <wb-module deploy-name="welcome">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <dependent-module archiveName="welcome-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/welcome/welcome">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <property name="context-root" value="rest-api"/>
-        <property name="java-output-path" value="/rest-api/target/classes"/>
+        <property name="context-root" value="welcome"/>
+        <property name="java-output-path" value="/welcome/target/classes"/>
     </wb-module>
 </project-modules>
